--- a/app/views/application/root.html.erb
+++ b/app/views/application/root.html.erb
@@ -1,1 +1,11 @@
-root
+<div class="px-4 text-center">
+  <%= image_tag 'logo', class: "d-block mx-auto" %>
+  <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+    <div class="d-flex justify-content-center">
+      <button type="button" class="btn btn-primary mx-2">Primary button</button>
+      <button type="button" class="btn btn-outline-secondary mx-2">Secondary</button>
+    </div>
+  </div>
+</div>
