changed buttons/ added backgorund color

--- a/app/views/application/root.html.erb
+++ b/app/views/application/root.html.erb
@@ -1,8 +1,8 @@
 <div class="px-4 text-center">
   <%= image_tag 'logo', class: "d-block mx-auto" %>
-  <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
+  <h1 class="display-3 fw-bold text-body-emphasis">Alterations made easy!</h1>
   <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+    <p class="lead mb-4">At EasyAlt, we believe that looking and feeling your best should be effortless. Our platform simplifies the alteration process, whether you visit a local tailor shop, high-end retailer, or work with a trusted seamstress. We're committed to ensuring that every garment is expertly fitted, so you can enjoy a perfectly tailored experience that's as easy as it is enjoyable.</p>
     <div class="d-flex justify-content-center">
       <button type="button" class="btn btn-primary mx-2">Primary button</button>
       <button type="button" class="btn btn-outline-secondary mx-2">Secondary</button>
