--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      List of all messages
+      Start a new alteration
     </h1>
   </div>
 </div>
@@ -14,27 +14,29 @@
       Add a new message
     </h2>
 
+     <div>
+      <label for="photo_box">
+        Photo
+      </label>
+      <form action="/create_user" method="post" class="form-horizontal" enctype="multipart/form-data">
+       <input type="file" id="photo" name="photo" class="form-control">
+    </div>
+
     <form action="/insert_message" method="post">
       <div>
         <label for="content_box">
           Content
         </label>
 
-        <textarea id="content_box" name="query_content" rows="3"></textarea>
+        <textarea id="content_box" name="query_content" rows="2"></textarea>
       </div>
 
-      <div>
-        <label for="photo_box">
-          Photo
-        </label>
-
-        <input type="text" id="photo_box" name="query_photo">
-      </div>
 
       <div>
         <label for="sender_id_box">
           Sender
         </label>
+        
 
         <input type="text" id="sender_id_box" name="query_sender_id">
       </div>
@@ -54,42 +56,6 @@
   </div>
 </div>
 
-<hr>
-<div>
-  <div>
-    <table border="1">
-      <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          Content
-        </th>
-
-        <th>
-          Photo
-        </th>
-
-        <th>
-          Sender
-        </th>
-
-        <th>
-          Ticket
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
 
       <% @list_of_messages.each do |a_message| %>
       <tr>
