--- a/app/views/application/root.html.erb
+++ b/app/views/application/root.html.erb
@@ -4,8 +4,8 @@
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4">At EasyAlt, we believe that looking and feeling your best should be effortless. Our platform simplifies the alteration process, whether you visit a local tailor shop, high-end retailer, or work with a trusted seamstress. We're committed to ensuring that every garment is expertly fitted, so you can enjoy a perfectly tailored experience that's as easy as it is enjoyable.</p>
     <div class="d-flex justify-content-center">
-      <button type="button" class="btn btn-primary mx-2">Primary button</button>
-      <button type="button" class="btn btn-outline-secondary mx-2">Secondary</button>
+      <button type="button1" class="btn btn-dark mx-2"><a href= "/user_sign_up">Sign Up</a></button>
+      <button type="button2" class="btn btn-light mx-2"><a href= "/about">About</a></button>
     </div>
   </div>
 </div>
