--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,45 @@
 
 
  .background {
-    background-color: :ivory;
+    background-color: tan;
  }
+
+ body::before {
+  content: "";
+  background-color: tan;
+  background-size: cover;
+  opacity: 0.5;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  right: 0;
+  top: 0;
+  z-index: -1;
+ }
+
+ .button {
+  background-color: #8c7851;
+  text-decoration-color: none;
+ }
+
+ .btn-link {
+  background: none;
+  border: none;
+  color: none;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.btn {
+   display: inline-block;
+   padding: 10px 20px;
+   background-color: #007bff;
+   color: #fff;
+   text-decoration: none;
+   border-radius: 4px;
+ }
+ 
+ .btn:hover {
+   background-color: #0069d9;
+ }
+ 
