--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,5 @@
 <div>
+  <div class="px-4 text-center">
   <div>
     <h1>
       Start a new alteration
@@ -95,6 +96,5 @@
       <% end %>
     </table>
   </div>
+  </div>
 </div>
-
-<hr>
