--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark mb-4">
   <div class="container">
     <a class="navbar-brand" href="/">
       Easy Alt
     </a>
-
+  
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsible-nav-links" aria-controls="collapsible-nav-links" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,7 +12,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Resources
+            Menu
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a href="/messages" class="dropdown-item">
@@ -21,7 +21,11 @@
             <a href="/tickets" class="dropdown-item">
               Tickets
             </a>
+            <a href="/user_sign_out" class="dropdown-item">
+              Log Out
+            </a>
           </div>
+
         </li>
       </ul>
     </div> <!-- .navbar-collapse -->
