added a dashboard for user

--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,7 +1,11 @@
 <h1>About Brandi..</h1>
 <div style="display: flex; justify-content: center; align-items: center;">
   <div style="text-align: left; width: 60%;">
-    <p>Brandi is...... </p>
+    <p>
+Brandi Davis is a self-motivated, energetic & enterprising young designer from Chicago, IL. 
+
+With a Bachelors in Fine Arts (Fashion Design), She can not only design, but is also very skilled in the technical aspects as well. Brandi has always had an entrepreneurial spirit , and EasyAlt isn’t her first hustle. Brandi also owns an exclusive brand named Ntent for those who thrive to make statements. We feature ready-to-wear collections for women sizes 0-20 and we PROMISE to offer garments that are versatile, polished, and clean. 
+/ </p>
   </div>
   <div style="width: 60%;">
     <%= image_tag("aboutme.jpg", alt: "Brandi", style: "max-width: 100%;") %>
