--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <hr>
-
+<div class="px-4 text-center">
 <div>
   <div>
     <h2>
@@ -95,6 +95,7 @@
       </tr>
       <% end %>
     </table>
+  </div>
   </div>
   </div>
 </div>
