--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -21,15 +21,31 @@
           Customer
         </label>
 
-        <input type="text" id="customer_id_box" name="query_customer_id">
+        <form>
+      <div class="row">
+      <div class="col">
+      <input type="text" class="form-control" placeholder="First name">
       </div>
+      <div class="col">
+      <input type="text" class="form-control" placeholder="Last name">
+      </div>
+      </div>
+      </form>
 
+    
       <div>
         <label for="vendor_id_box">
           Vendor
         </label>
 
-        <input type="text" id="vendor_id_box" name="query_vendor_id">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+          <label class="form-check-label" for="inlineRadio1">Yes</label>
+          <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+          <label class="form-check-label" for="inlineRadio2">No</label>
+        </div>
+      </div>
       </div>
 
       <div>
@@ -40,6 +56,15 @@
         <textarea id="details_box" name="query_details" rows="3"></textarea>
       </div>
 
+       <div>
+        <label for="details_box">
+          Measurements
+        </label>
+
+        <textarea id="details_box" name="query_details" rows="1"></textarea>
+      </div>
+      
+      
       <div>
       <label for="photo_box">
         Photo
@@ -47,14 +72,17 @@
       <form action="/create_user" method="post" class="form-horizontal" enctype="multipart/form-data">
        <input type="file" id="photo" name="photo" class="form-control">
       </div>
-
       <div>
-        <label for="status_box">
-          Status
-        </label>
-
-        <input type="text" id="status_box" name="query_status">
-      </div>
+        <form>
+           <div class="form-row align-items-center">
+            <div class="col-auto my-1">
+              <label class="mr-sm-2" for="inlineFormCustomSelect">Status</label>
+              <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+              <option selected>Choose...</option>
+              <option value="1">New</option>
+              <option value="2">In Progress</option>
+              <option value="3">Complete</option>
+            </select>
 
       <button>
         Create ticket
