moved create ticket form to partial

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -9,87 +9,7 @@
 
 <hr>
 
-<div>
-  <div>
-    <h2>
-      Add a new ticket
-    </h2>
-
-    <form action="/insert_ticket" method="post">
-      <div>
-        <label for="customer_id_box">
-          Customer
-        </label>
-
-        <form>
-      <div class="row">
-      <div class="col">
-      <input type="text" class="form-control" placeholder="First name">
-      </div>
-      <div class="col">
-      <input type="text" class="form-control" placeholder="Last name">
-      </div>
-      </div>
-      </form>
-
-    
-      <div>
-        <label for="vendor_id_box">
-          Vendor
-        </label>
-
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Yes</label>
-          <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-          <label class="form-check-label" for="inlineRadio2">No</label>
-        </div>
-      </div>
-      </div>
-
-      <div>
-        <label for="details_box">
-          Details
-        </label>
-
-        <textarea id="details_box" name="query_details" rows="3"></textarea>
-      </div>
-
-       <div>
-        <label for="details_box">
-          Measurements
-        </label>
-
-        <textarea id="details_box" name="query_details" rows="1"></textarea>
-      </div>
-      
-      
-      <div>
-      <label for="photo_box">
-        Photo
-      </label>
-      <form action="/create_user" method="post" class="form-horizontal" enctype="multipart/form-data">
-       <input type="file" id="photo" name="photo" class="form-control">
-      </div>
-      <div>
-        <form>
-           <div class="form-row align-items-center">
-            <div class="col-auto my-1">
-              <label class="mr-sm-2" for="inlineFormCustomSelect">Status</label>
-              <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-              <option selected>Choose...</option>
-              <option value="1">New</option>
-              <option value="2">In Progress</option>
-              <option value="3">Complete</option>
-            </select>
-
-      <button>
-        Create ticket
-      </button>
-    </form>
-  </div>
-</div>
+    <%= render "tickets/form" %>
 
 
       <% @list_of_tickets.each do |a_ticket| %>
