--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -31,7 +31,7 @@
         </td>
 
         <td>
-          <%= a_ticket.photo %>
+          <%# <%= a_ticket.photo %> %>
         </td>
 
         <td>
